--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MVP_Retrofit</string>
     <string name="try_again">Повторить</string>
+    <string name="requset">Отправить запрос</string>
 </resources>
